--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Main project page featuring coding and cybersecurity content with a Matrix effect.">
-    <meta name="keywords" content="web, project, design, html, css, coding, linux, cybersecurity">
-    <meta name="author" content="IA Helper">
-    <title>Code Projects - Matrix Design</title>
+    <title>Core System - Project Index</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body id="top">
@@ -16,101 +13,88 @@
     <header class="capcalera-principal">
         <div class="logo-container">
             <div class="code-image-simulation">
-                &lt;div class="code"&gt;
+                &lt;SYS/ADMIN&gt;
             </div>
         </div>
         <nav class="menu-navegacio-principal">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects_portfolio.html">Projects</a></li>
-                <li><a href="satisfaction_form.html">Satisfaction Form</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="satisfaction_form.html">Feedback</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="contingut-principal">
 
-        <aside class="columna-aside">
-            <div class="aside-content">
-                <h3>Cybersecurity: Risk & Security</h3>
-                <p style="font-family: monospace; color: #0f0; font-size: 0.9em;">&gt; System Status: Secure</p>
-
-
-
-                <p>Cybersecurity protects systems and networks from digital attacks aimed at accessing or destroying sensitive information.</p>
-
-                <h4>Key Risk Activities:</h4>
-                <ul class="llista-riscos">
-                    <li><strong>Risk Analysis:</strong> Identifying vulnerabilities and potential threats.</li>
-                    <li><strong>Threat Monitoring:</strong> Real-time traffic analysis using SIEM tools.</li>
-                    <li><strong>Implementing Defenses:</strong> Firewalls, IDS, and encryption protocols.</li>
-                    <li><strong>Incident Response:</strong> Containing breaches and system recovery.</li>
-                    <li><strong>Security Audits:</strong> Regular penetration testing (Pentesting).</li>
-                    <li><strong>User Education:</strong> Training against Phishing and Social Engineering.</li>
-                </ul>
-            </div>
-        </aside>
-
-        <section class="seccio-projectes">
-
-            <article class="projecte">
-                <div class="info-textual">
-                    <h2><a href="linux_project.html">Linux Project: System Administration</a></h2>
-                    <p class="descripcio-linies">Exploring core Linux distributions (Ubuntu, CentOS)</p>
-                    <p class="descripcio-linies">Basic command-line interface (CLI) and shell usage</p>
-                    <p class="descripcio-linies">User management and file permissions (chmod/chown)</p>
-                    <p class="descripcio-linies">Introduction to automation with Bash scripting</p>
-                    <hr class="separador">
-                </div>
-                <div class="elements-visuals">
-                    <div class="cercle linux-image">if (cmd)</div>
-                    <div class="cercle linux-image">sudo</div>
-                    <div class="cercle linux-image">#!/bin/sh</div>
-                </div>
-            </article>
-
-            <article class="projecte">
-                <div class="info-textual">
-                    <h2><a href="css_project.html">CSS Project: Modern Layout & Design</a></h2>
-                    <p class="descripcio-linies">Layout techniques using Flexbox and CSS Grid</p>
-                    <p class="descripcio-linies">Understanding the CSS Box Model and positioning</p>
-                    <p class="descripcio-linies">Responsive design using advanced Media Queries</p>
-                    <p class="descripcio-linies">Transitions, animations, and pseudo-elements</p>
-                    <hr class="separador">
-                </div>
-                <div class="elements-visuals">
-                    <div class="cercle css-image">.class</div>
-                    <div class="cercle css-image">display:flex;</div>
-                    <div class="cercle css-image">@media</div>
-                </div>
-            </article>
-
-            <section class="navegacio-pagines">
-                <div class="menu-navegacio-pagines">
-                    <h3 style="color: #0f0; margin-bottom: 10px;">&gt;_ Terminal Navigation</h3>
-                    <div style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
-                        <a href="#top" style="color: #0f0; text-decoration: none;">[ ↑ Up ]</a>
-                        <a href="projects_portfolio.html" style="color: #0f0; text-decoration: none;">[ cd /projects ]</a>
-                        <a href="python_project.html" style="color: #0f0; text-decoration: none;">[ ./python ]</a>
-                        <a href="sql_project.html" style="color: #0f0; text-decoration: none;">[ ./sql ]</a>
-                        <a href="packet_tracer_project.html" style="color: #0f0; text-decoration: none;">[ ./networking ]</a>
-                    </div>
-                </div>
-            </section>
-
+        <section class="hero-welcome">
+            <h1 style="text-shadow: 0 0 15px #0f0;">SYSTEM ACCESS GRANTED</h1>
+            <p class="project-summary">
+                &gt; Welcome to the main projects index. Here you will find an overview of all technical modules.
+            </p>
         </section>
 
+        <div class="main-layout">
+            <aside class="columna-aside">
+                <div class="aside-content">
+                    <h3>Risk & Security</h3>
+                    <p class="status-line">&gt; Firewall: Active</p>
+
+                    <div class="security-box">
+                        <ul>
+                            <li><strong>Risk Analysis</strong></li>
+                            <li><strong>Threat Monitoring</strong></li>
+                            <li><strong>Incident Response</strong></li>
+                            <li><strong>Security Audits</strong></li>
+                        </ul>
+                    </div>
+                </div>
+            </aside>
+
+            <section class="seccio-projectes">
+
+                <article class="projecte">
+                    <div class="info-textual">
+                        <h2><a href="linux_project.html">Linux System Admin</a></h2>
+                        <p class="descripcio-linies">Exploring core Linux distributions</p>
+                        <p class="descripcio-linies">User management and permissions</p>
+                        <p class="descripcio-linies">Bash scripting automation</p>
+                    </div>
+                    <div class="elements-visuals">
+                        <div class="cercle">ROOT</div>
+                        <div class="cercle">BASH</div>
+                    </div>
+                </article>
+
+                <article class="projecte">
+                    <div class="info-textual">
+                        <h2><a href="css_project.html">Advanced CSS Design</a></h2>
+                        <p class="descripcio-linies">Flexbox & Grid layouts</p>
+                        <p class="descripcio-linies">Responsive Web Design</p>
+                        <p class="descripcio-linies">Matrix & Neon Animations</p>
+                    </div>
+                    <div class="elements-visuals">
+                        <div class="cercle">GRID</div>
+                        <div class="cercle">FLEX</div>
+                    </div>
+                </article>
+
+                <nav class="menu-navegacio-pagines">
+                    <p>&gt;_ TERMINAL_NAV:</p>
+                    <a href="#top">[ UP ]</a>
+                    <a href="python_project.html">[ PYTHON ]</a>
+                    <a href="sql_project.html">[ SQL ]</a>
+                    <a href="packet_tracer_project.html">[ NETWORK ]</a>
+                </nav>
+
+            </section>
+        </div>
     </main>
 
     <footer class="peu-pagina">
-        <p>&copy; 2025 Code Project Name. All Rights Reserved.</p>
-        <div class="xarxes-socials">
-            <a href="#">[LinkedIn]</a> | <a href="#">[GitHub]</a>
-        </div>
+        <p>&copy; 2025 HACKER_PORTFOLIO // All Rights Reserved.</p>
     </footer>
 
     <script src="./js/matrix_effect.js"></script>
-
 </body>
 </html>
