--- a/projects_portfolio.html
+++ b/projects_portfolio.html
@@ -36,7 +36,9 @@
             </div>
 
             <p style="color: #0f0; font-family: monospace;">&gt; Accessing repository... OK</p>
-            <p>Benvingut a l'índex principal de projectes. Aquí trobaràs una visió general de tots els mòduls tècnics.</p>
+            <p><p class="project-summary" style="font-family: monospace; color: #0f0; margin-bottom: 20px;">
+                &gt; Welcome to the main projects index. Here you will find an overview of all technical modules.
+            </p></p>
 
             <hr class="separador">
 
