--- a/linux_project.html
+++ b/linux_project.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body id="top">
+<div id="boot-screen">
+    <div id="boot-text"></div>
+    <span class="cursor">_</span>
+</div>
     <canvas id="matrixCanvas"></canvas>
 
     <header class="capcalera-principal">
