--- a/satisfaction_form.html
+++ b/satisfaction_form.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+<div id="boot-screen">
+    <div id="boot-text"></div>
+    <span class="cursor">_</span>
+</div>
     <canvas id="matrixCanvas"></canvas>
     <header class="capcalera-principal">
         <div class="logo-container">
