--- a/index.html
+++ b/index.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Main project page featuring coding and cybersecurity content with a Matrix effect.">
-    <meta name="keywords" content="web, project, design, html, css, coding, linux, cybersecurity">
-    <meta name="author" content="IA Helper">
     <title>Code Projects - Matrix Design</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css?v=2">
 </head>
 <body id="top">
-<div id="boot-screen">
-    <div id="boot-text"></div>
-    <span class="cursor">_</span>
-</div>
+    <div id="boot-screen">
+        <div id="boot-text"></div>
+        <span class="cursor">_</span>
+    </div>
+
     <canvas id="matrixCanvas"></canvas>
 
     <header class="capcalera-principal">
         <div class="logo-container">
-            <div class="code-image-simulation">
-                &lt;div class="code"&gt;
-            </div>
+            <div class="code-image-simulation">&lt;div class="code"&gt;</div>
         </div>
         <nav class="menu-navegacio-principal">
             <ul>
@@ -33,24 +30,16 @@
     </header>
 
     <main class="contingut-principal">
-
         <aside class="columna-aside">
             <div class="aside-content">
                 <h3>Cybersecurity: Risk & Security</h3>
                 <p style="font-family: monospace; color: #0f0; font-size: 0.9em;">&gt; System Status: Secure</p>
-
-                [Image placeholder]
-
-                <p>Cybersecurity protects systems and networks from digital attacks aimed at accessing or destroying sensitive information.</p>
-
-                <h4>Key Risk Activities:</h4>
+                <div style="border: 1px solid #0f0; height: 100px; margin: 10px 0; display: flex; align-items: center; justify-content: center;">[SECURE_LAYER_V2]</div>
+                <p>Cybersecurity protects systems and networks from digital attacks.</p>
                 <ul class="llista-riscos">
-                    <li><strong>Risk Analysis:</strong> Identifying vulnerabilities and potential threats.</li>
-                    <li><strong>Threat Monitoring:</strong> Real-time traffic analysis using SIEM tools.</li>
-                    <li><strong>Implementing Defenses:</strong> Firewalls, IDS, and encryption protocols.</li>
-                    <li><strong>Incident Response:</strong> Containing breaches and system recovery.</li>
-                    <li><strong>Security Audits:</strong> Regular penetration testing (Pentesting).</li>
-                    <li><strong>User Education:</strong> Training against Phishing and Social Engineering.</li>
+                    <li><strong>Risk Analysis:</strong> Identifying vulnerabilities.</li>
+                    <li><strong>Threat Monitoring:</strong> Real-time traffic analysis.</li>
+                    <li><strong>Implementing Defenses:</strong> Firewalls and encryption.</li>
                 </ul>
             </div>
         </aside>
@@ -59,7 +48,7 @@
 
             <article class="projecte">
                 <div class="info-textual">
-                    <h2><a href="linux_project.html">Linux Project: System Administration</a></h2>
+                    <h2><a href="linux_project.html" class="enllac-principal">Linux Project: System Administration</a></h2>
                     <p class="descripcio-linies">Exploring core Linux distributions (Ubuntu, CentOS)</p>
                     <p class="descripcio-linies">Basic command-line interface (CLI) and shell usage</p>
                     <p class="descripcio-linies">User management and file permissions (chmod/chown)</p>
@@ -75,7 +64,7 @@
 
             <article class="projecte">
                 <div class="info-textual">
-                    <h2><a href="css_project.html">CSS Project: Modern Layout & Design</a></h2>
+                    <h2><a href="css_project.html" class="enllac-principal">CSS Project: Modern Layout & Design</a></h2>
                     <p class="descripcio-linies">Layout techniques using Flexbox and CSS Grid</p>
                     <p class="descripcio-linies">Understanding the CSS Box Model and positioning</p>
                     <p class="descripcio-linies">Responsive design using advanced Media Queries</p>
@@ -95,25 +84,16 @@
                     <div style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
                         <a href="#top" style="color: #0f0; text-decoration: none;">[ ↑ Up ]</a>
                         <a href="projects_portfolio.html" style="color: #0f0; text-decoration: none;">[ cd /projects ]</a>
-                        <a href="python_project.html" style="color: #0f0; text-decoration: none;">[ ./python ]</a>
-                        <a href="sql_project.html" style="color: #0f0; text-decoration: none;">[ ./sql ]</a>
-                        <a href="packet_tracer_project.html" style="color: #0f0; text-decoration: none;">[ ./networking ]</a>
                     </div>
                 </div>
             </section>
-
         </section>
-
     </main>
 
     <footer class="peu-pagina">
         <p>&copy; 2025 Code Project Name. All Rights Reserved.</p>
-        <div class="xarxes-socials">
-            <a href="#">[LinkedIn]</a> | <a href="#">[GitHub]</a>
-        </div>
     </footer>
 
-    <script src="./js/matrix_effect.js"></script>
-
+    <script src="./js/matrix_effect.js?v=2"></script>
 </body>
 </html>
