--- a/projects_portfolio.html
+++ b/projects_portfolio.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of all technical projects, including Linux, CSS, Python, SQL, PowerShell, and Packet Tracer.">
     <title>Projects Portfolio - Matrix Mode</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css?v=2">
 </head>
 <body id="top">
-<div id="boot-screen">
-    <div id="boot-text"></div>
-    <span class="cursor">_</span>
-</div>
+    <div id="boot-screen">
+        <div id="boot-text"></div>
+        <span class="cursor">_</span>
+    </div>
+
     <canvas id="matrixCanvas"></canvas>
 
     <header class="capcalera-principal">
@@ -31,73 +32,64 @@
     </header>
 
     <main class="contingut-principal-detall">
-
         <section class="projecte-detall">
-
             <div class="titol-detall">
                 <h1>Technical Projects Portfolio</h1>
             </div>
 
             <p style="color: #0f0; font-family: monospace;">&gt; Accessing repository... OK</p>
-            <p><p class="project-summary" style="font-family: monospace; color: #0f0; margin-bottom: 20px;">
+            <p class="project-summary" style="font-family: monospace; color: #0f0; margin-bottom: 20px;">
                 &gt; Welcome to the main projects index. Here you will find an overview of all technical modules.
-            </p></p>
+            </p>
 
             <hr class="separador">
 
             <div class="project-list">
                 <h2>System & Development Projects:</h2>
-                <ul>
-                    <li>
-                        <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <div>
-                                <h3><a href="linux_project.html">Linux Project: System Administration & Security</a></h3>
-                                <p>Focuses on CLI, permissions, and basic scripting.</p>
-                            </div>
-                            <div class="cercle linux-image">sudo</div>
+                <div class="grid-proyectos">
+                    <article class="projecte-card">
+                        <div class="info-textual">
+                            <h3><a href="linux_project.html" class="enllac-principal">Linux Project: System Administration</a></h3>
+                            <p class="descripcio-linies">Focuses on CLI, permissions, and basic scripting.</p>
                         </div>
-                    </li>
-                    <li>
-                        <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <div>
-                                <h3><a href="css_project.html">CSS Project: Modern Layout and Responsive Design</a></h3>
-                                <p>Deep dive into Flexbox, CSS Grid, and Media Queries.</p>
-                            </div>
-                            <div class="cercle css-image">.style</div>
+                        <div class="cercle linux-image">sudo</div>
+                    </article>
+
+                    <article class="projecte-card">
+                        <div class="info-textual">
+                            <h3><a href="css_project.html" class="enllac-principal">CSS Project: Modern Layout</a></h3>
+                            <p class="descripcio-linies">Deep dive into Flexbox, CSS Grid, and Media Queries.</p>
                         </div>
-                    </li>
-                </ul>
+                        <div class="cercle css-image">.style</div>
+                    </article>
+                </div>
 
                 <h2>Emerging Technology Projects:</h2>
-                <ul>
-                    <li>
-                        <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <div>
-                                <h3><a href="python_project.html">Python Project: Data Automation</a></h3>
-                                <p>Introduction to data structures and automating tasks using scripts.</p>
-                            </div>
-                            <div class="cercle python-image">print()</div>
+                <div class="grid-proyectos">
+                    <article class="projecte-card">
+                        <div class="info-textual">
+                            <h3><a href="python_project.html" class="enllac-principal">Python Project: Automation</a></h3>
+                            <p class="descripcio-linies">Introduction to data structures and automating tasks.</p>
                         </div>
-                    </li>
-                    <li>
-                        <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <div>
-                                <h3><a href="sql_project.html">SQL Project: Database Management</a></h3>
-                                <p>Learning how to design databases and write complex queries.</p>
-                            </div>
-                            <div class="cercle sql-image">SELECT</div>
+                        <div class="cercle python-image">print()</div>
+                    </article>
+
+                    <article class="projecte-card">
+                        <div class="info-textual">
+                            <h3><a href="sql_project.html" class="enllac-principal">SQL Project: Databases</a></h3>
+                            <p class="descripcio-linies">Learning how to design databases and write queries.</p>
                         </div>
-                    </li>
-                    <li>
-                        <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <div>
-                                <h3><a href="powershell_project.html">PowerShell Project: Windows Management</a></h3>
-                                <p>Scripting for Windows environments and AD automation.</p>
-                            </div>
-                            <div class="cercle powershell-image">PS&gt;_</div>
+                        <div class="cercle sql-image">SELECT</div>
+                    </article>
+
+                    <article class="projecte-card">
+                        <div class="info-textual">
+                            <h3><a href="powershell_project.html" class="enllac-principal">PowerShell Project</a></h3>
+                            <p class="descripcio-linies">Scripting for Windows environments and AD automation.</p>
                         </div>
-                    </li>
-                </ul>
+                        <div class="cercle powershell-image">PS&gt;_</div>
+                    </article>
+                </div>
             </div>
 
             <div class="menu-navegacio-pagines-detall">
@@ -108,7 +100,6 @@
                     <a href="#top" style="color: #0f0; text-decoration: none;">[ ↑ top ]</a>
                 </div>
             </div>
-
         </section>
     </main>
 
@@ -116,7 +107,6 @@
         <p>&copy; 2025 Code Project Name. All Rights Reserved.</p>
     </footer>
 
-    <script src="./js/matrix_effect.js"></script>
-
+    <script src="./js/matrix_effect.js?v=2"></script>
 </body>
 </html>
