--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Main project page featuring coding and cybersecurity content with a Matrix effect.">
     <title>Code Projects - Matrix Design</title>
-    <link rel="stylesheet" href="./css/style.css?v=2">
+    <link rel="stylesheet" href="./css/style.css?v=3">
 </head>
 <body id="top">
     <div id="boot-screen">
@@ -35,17 +35,16 @@
                 <h3>Cybersecurity: Risk & Security</h3>
                 <p style="font-family: monospace; color: #0f0; font-size: 0.9em;">&gt; System Status: Secure</p>
                 <div style="border: 1px solid #0f0; height: 100px; margin: 10px 0; display: flex; align-items: center; justify-content: center;">[SECURE_LAYER_V2]</div>
-                <p>Cybersecurity protects systems and networks from digital attacks.</p>
+                <p>La ciberseguridad protege sistemas y redes contra ataques digitales.</p>
                 <ul class="llista-riscos">
-                    <li><strong>Risk Analysis:</strong> Identifying vulnerabilities.</li>
-                    <li><strong>Threat Monitoring:</strong> Real-time traffic analysis.</li>
-                    <li><strong>Implementing Defenses:</strong> Firewalls and encryption.</li>
+                    <li><strong>Análisis de Riesgos:</strong> Identificación de vulnerabilidades.</li>
+                    <li><strong>Monitoreo de Amenazas:</strong> Análisis de tráfico en tiempo real.</li>
+                    <li><strong>Implementación de Defensas:</strong> Firewalls y cifrado.</li>
                 </ul>
             </div>
         </aside>
 
         <section class="seccio-projectes">
-
             <article class="projecte">
                 <div class="info-textual">
                     <h2><a href="linux_project.html" class="enllac-principal">Linux Project: System Administration</a></h2>
@@ -84,6 +83,7 @@
                     <div style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
                         <a href="#top" style="color: #0f0; text-decoration: none;">[ ↑ Up ]</a>
                         <a href="projects_portfolio.html" style="color: #0f0; text-decoration: none;">[ cd /projects ]</a>
+                        <a href="python_project.html" style="color: #0f0; text-decoration: none;">[ ./python ]</a>
                     </div>
                 </div>
             </section>
@@ -94,6 +94,6 @@
         <p>&copy; 2025 Code Project Name. All Rights Reserved.</p>
     </footer>
 
-    <script src="./js/matrix_effect.js?v=2"></script>
+    <script src="./js/matrix_effect.js?v=3"></script>
 </body>
 </html>
