--- a/projects_portfolio.html
+++ b/projects_portfolio.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of all technical projects, including Linux, CSS, Python, SQL, PowerShell, and Packet Tracer.">
+    <meta name="description" content="Portfolio of all technical projects.">
     <title>Projects Portfolio - Matrix Mode</title>
-    <link rel="stylesheet" href="./css/style.css?v=2">
+    <link rel="stylesheet" href="./css/style.css?v=3">
 </head>
 <body id="top">
     <div id="boot-screen">
@@ -17,9 +17,7 @@
 
     <header class="capcalera-principal">
         <div class="logo-container">
-            <div class="code-image-simulation">
-                &lt;div class="projects_index"&gt;
-            </div>
+            <div class="code-image-simulation">&lt;div class="projects_index"&gt;</div>
         </div>
         <nav class="menu-navegacio-principal">
             <ul>
@@ -39,64 +37,51 @@
 
             <p style="color: #0f0; font-family: monospace;">&gt; Accessing repository... OK</p>
             <p class="project-summary" style="font-family: monospace; color: #0f0; margin-bottom: 20px;">
-                &gt; Welcome to the main projects index. Here you will find an overview of all technical modules.
+                &gt; Welcome to the main projects index. All modules are operational.
             </p>
 
             <hr class="separador">
 
             <div class="project-list">
-                <h2>System & Development Projects:</h2>
-                <div class="grid-proyectos">
-                    <article class="projecte-card">
-                        <div class="info-textual">
-                            <h3><a href="linux_project.html" class="enllac-principal">Linux Project: System Administration</a></h3>
-                            <p class="descripcio-linies">Focuses on CLI, permissions, and basic scripting.</p>
-                        </div>
-                        <div class="cercle linux-image">sudo</div>
-                    </article>
+                <h2>System & Development:</h2>
+                <article class="projecte">
+                    <div class="info-textual">
+                        <h3><a href="linux_project.html" class="enllac-principal">Linux Project: System Administration</a></h3>
+                        <p class="descripcio-linies">Administración de servidores y seguridad en consola.</p>
+                    </div>
+                    <div class="cercle linux-image">sudo</div>
+                </article>
 
-                    <article class="projecte-card">
-                        <div class="info-textual">
-                            <h3><a href="css_project.html" class="enllac-principal">CSS Project: Modern Layout</a></h3>
-                            <p class="descripcio-linies">Deep dive into Flexbox, CSS Grid, and Media Queries.</p>
-                        </div>
-                        <div class="cercle css-image">.style</div>
-                    </article>
-                </div>
+                <article class="projecte">
+                    <div class="info-textual">
+                        <h3><a href="css_project.html" class="enllac-principal">CSS Project: Modern Layout</a></h3>
+                        <p class="descripcio-linies">Diseño responsivo y arquitectura web moderna.</p>
+                    </div>
+                    <div class="cercle css-image">.style</div>
+                </article>
 
-                <h2>Emerging Technology Projects:</h2>
-                <div class="grid-proyectos">
-                    <article class="projecte-card">
-                        <div class="info-textual">
-                            <h3><a href="python_project.html" class="enllac-principal">Python Project: Automation</a></h3>
-                            <p class="descripcio-linies">Introduction to data structures and automating tasks.</p>
-                        </div>
-                        <div class="cercle python-image">print()</div>
-                    </article>
+                <h2>Emerging Technology:</h2>
+                <article class="projecte">
+                    <div class="info-textual">
+                        <h3><a href="python_project.html" class="enllac-principal">Python Project: Automation</a></h3>
+                        <p class="descripcio-linies">Scripts para automatización de tareas y datos.</p>
+                    </div>
+                    <div class="cercle python-image">print()</div>
+                </article>
 
-                    <article class="projecte-card">
-                        <div class="info-textual">
-                            <h3><a href="sql_project.html" class="enllac-principal">SQL Project: Databases</a></h3>
-                            <p class="descripcio-linies">Learning how to design databases and write queries.</p>
-                        </div>
-                        <div class="cercle sql-image">SELECT</div>
-                    </article>
-
-                    <article class="projecte-card">
-                        <div class="info-textual">
-                            <h3><a href="powershell_project.html" class="enllac-principal">PowerShell Project</a></h3>
-                            <p class="descripcio-linies">Scripting for Windows environments and AD automation.</p>
-                        </div>
-                        <div class="cercle powershell-image">PS&gt;_</div>
-                    </article>
-                </div>
+                <article class="projecte">
+                    <div class="info-textual">
+                        <h3><a href="sql_project.html" class="enllac-principal">SQL Project: Databases</a></h3>
+                        <p class="descripcio-linies">Diseño y gestión de bases de datos relacionales.</p>
+                    </div>
+                    <div class="cercle sql-image">SELECT</div>
+                </article>
             </div>
 
             <div class="menu-navegacio-pagines-detall">
                 <h3 style="color: #0f0; margin-bottom: 10px;">&gt;_ Terminal Navigation</h3>
-                <div style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
+                <div style="display: flex; justify-content: center; gap: 15px;">
                     <a href="index.html" style="color: #0f0; text-decoration: none;">[ cd /home ]</a>
-                    <a href="satisfaction_form.html" style="color: #0f0; text-decoration: none;">[ ./run_survey ]</a>
                     <a href="#top" style="color: #0f0; text-decoration: none;">[ ↑ top ]</a>
                 </div>
             </div>
@@ -107,6 +92,6 @@
         <p>&copy; 2025 Code Project Name. All Rights Reserved.</p>
     </footer>
 
-    <script src="./js/matrix_effect.js?v=2"></script>
+    <script src="./js/matrix_effect.js?v=3"></script>
 </body>
 </html>
