--- a/projects_portfolio.html
+++ b/projects_portfolio.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of all technical projects.">
+    <meta name="description" content="Portfolio of all technical projects, including Linux, CSS, Python, SQL, PowerShell, and Packet Tracer.">
     <title>Projects Portfolio - Matrix Mode</title>
     <link rel="stylesheet" href="./css/style.css?v=3">
 </head>
 <body id="top">
+
     <div id="boot-screen">
         <div id="boot-text"></div>
         <span class="cursor">_</span>
@@ -17,7 +18,9 @@
 
     <header class="capcalera-principal">
         <div class="logo-container">
-            <div class="code-image-simulation">&lt;div class="projects_index"&gt;</div>
+            <div class="code-image-simulation">
+                &lt;div class="projects_index"&gt;
+            </div>
         </div>
         <nav class="menu-navegacio-principal">
             <ul>
@@ -31,60 +34,83 @@
 
     <main class="contingut-principal-detall">
         <section class="projecte-detall">
+
             <div class="titol-detall">
                 <h1>Technical Projects Portfolio</h1>
             </div>
 
             <p style="color: #0f0; font-family: monospace;">&gt; Accessing repository... OK</p>
             <p class="project-summary" style="font-family: monospace; color: #0f0; margin-bottom: 20px;">
-                &gt; Welcome to the main projects index. All modules are operational.
+                &gt; Welcome to the main projects index. All modules are operational and ready for inspection.
             </p>
 
             <hr class="separador">
 
             <div class="project-list">
-                <h2>System & Development:</h2>
+                <h2>System & Development Projects:</h2>
+                
                 <article class="projecte">
                     <div class="info-textual">
                         <h3><a href="linux_project.html" class="enllac-principal">Linux Project: System Administration</a></h3>
-                        <p class="descripcio-linies">Administración de servidores y seguridad en consola.</p>
+                        <p class="descripcio-linies">Focuses on CLI, permissions, and basic security hardening.</p>
                     </div>
-                    <div class="cercle linux-image">sudo</div>
+                    <div class="elements-visuals">
+                        <div class="cercle linux-image">sudo</div>
+                    </div>
                 </article>
 
                 <article class="projecte">
                     <div class="info-textual">
-                        <h3><a href="css_project.html" class="enllac-principal">CSS Project: Modern Layout</a></h3>
-                        <p class="descripcio-linies">Diseño responsivo y arquitectura web moderna.</p>
+                        <h3><a href="css_project.html" class="enllac-principal">CSS Project: Modern Layout & Design</a></h3>
+                        <p class="descripcio-linies">Deep dive into Flexbox, CSS Grid, and Responsive Web Design.</p>
                     </div>
-                    <div class="cercle css-image">.style</div>
+                    <div class="elements-visuals">
+                        <div class="cercle css-image">.style</div>
+                    </div>
                 </article>
 
-                <h2>Emerging Technology:</h2>
-                <article class="projecte">
-                    <div class="info-textual">
-                        <h3><a href="python_project.html" class="enllac-principal">Python Project: Automation</a></h3>
-                        <p class="descripcio-linies">Scripts para automatización de tareas y datos.</p>
-                    </div>
-                    <div class="cercle python-image">print()</div>
-                </article>
+                <h2>Emerging Technology Projects:</h2>
 
                 <article class="projecte">
                     <div class="info-textual">
-                        <h3><a href="sql_project.html" class="enllac-principal">SQL Project: Databases</a></h3>
-                        <p class="descripcio-linies">Diseño y gestión de bases de datos relacionales.</p>
+                        <h3><a href="python_project.html" class="enllac-principal">Python Project: Data Automation</a></h3>
+                        <p class="descripcio-linies">Introduction to scripting, data structures, and task automation.</p>
                     </div>
-                    <div class="cercle sql-image">SELECT</div>
+                    <div class="elements-visuals">
+                        <div class="cercle python-image">print()</div>
+                    </div>
+                </article>
+
+                <article class="projecte">
+                    <div class="info-textual">
+                        <h3><a href="sql_project.html" class="enllac-principal">SQL Project: Database Management</a></h3>
+                        <p class="descripcio-linies">Relational database design and complex query construction.</p>
+                    </div>
+                    <div class="elements-visuals">
+                        <div class="cercle sql-image">SELECT</div>
+                    </div>
+                </article>
+
+                <article class="projecte">
+                    <div class="info-textual">
+                        <h3><a href="powershell_project.html" class="enllac-principal">PowerShell Project: Windows Management</a></h3>
+                        <p class="descripcio-linies">Automation for Windows environments and Active Directory.</p>
+                    </div>
+                    <div class="elements-visuals">
+                        <div class="cercle powershell-image">PS&gt;_</div>
+                    </div>
                 </article>
             </div>
 
             <div class="menu-navegacio-pagines-detall">
                 <h3 style="color: #0f0; margin-bottom: 10px;">&gt;_ Terminal Navigation</h3>
-                <div style="display: flex; justify-content: center; gap: 15px;">
+                <div style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
                     <a href="index.html" style="color: #0f0; text-decoration: none;">[ cd /home ]</a>
+                    <a href="satisfaction_form.html" style="color: #0f0; text-decoration: none;">[ ./run_survey ]</a>
                     <a href="#top" style="color: #0f0; text-decoration: none;">[ ↑ top ]</a>
                 </div>
             </div>
+
         </section>
     </main>
 
@@ -93,5 +119,6 @@
     </footer>
 
     <script src="./js/matrix_effect.js?v=3"></script>
+
 </body>
 </html>
